--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,25 @@ body {
     align-items: center;
 }
 
+.container {
+    animation: animation 4s linear infinite;
+}
+
+@keyframes animation {
+  0% {
+    filter: hue-rotate(0deg);
+  }  
+  
+  100% {
+    filter: hue-rotate(360deg);
+  }
+}
+
 .hexagon {
     position: relative;
     width: 100px;
     height: 110px;
-    background: #111;
+    /* background: #0f0; */
+    background: #9650e1;
 	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
