--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,24 @@
 
 body {
     min-height: 100vh;
-    background: #3c3c3c;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background: #000;
 }
 
 .container {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
     animation: animation 4s linear infinite;
+}
+
+.row {
+    display: inline-flex;
+    margin-top: -32px;
+    margin-left: -50px;
+}
+
+.row:nth-child(even) {
+    margin-left: 1px;
 }
 
 @keyframes animation {
@@ -31,7 +41,24 @@ body {
     position: relative;
     width: 100px;
     height: 110px;
-    /* background: #0f0; */
-    background: #9650e1;
+    background: #111;
 	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    margin: 1px;
+    transition: 2s;
+}
+
+.hexagon:hover {
+    transition: 0s;
+    background: #9650e1;
+}
+
+.hexagon:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    pointer-events: none;
+    background: rgba(255,255,255, 0.02);
 }
