--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
     height: 110px;
     background: #111;
 	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-    margin: 1px;
+    margin: 2px;
     transition: 2s;
 }
 
@@ -61,4 +61,17 @@ body {
     height: 100%;
     pointer-events: none;
     background: rgba(255,255,255, 0.02);
+    z-index: 1000;
+}
+
+.hexagon:after {
+    content: '';
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    bottom: 4px;
+    left: 4px;
+    background: #111;
+	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    z-index: -1;
 }
